solving all problems in the backend